<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nextMatchMenu"
        android:enabled="true"
        android:title="Next Match"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/lastMatchMenu"
        android:enabled="true"
        android:title="Last Match"
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/favouriteMatchMenu"
        android:enabled="true"
        android:title="Favorite Match"
        android:icon="@android:drawable/star_off"
        app:showAsAction="ifRoom"
        />

</menu>