<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_to_fav"
        android:icon="@drawable/ic_add_to_fav"
        android:iconifiedByDefault="false"
        android:title="fav"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>